--- a/public/views/widgetDetails.html
+++ b/public/views/widgetDetails.html
@@ -1,7 +1,10 @@
-<div class="col-xs-6 col-md-6 widgetDetails">
-    <p>
-        this is the details
-        {{message}}
-    </p>
-
+<div ng-if=inDetailsMode() class="col-xs-12 col-md-4 widgetDetails ">
+        <h1 class="siteFont">Widget Details </h1>
+        <p>All available widget details , containing key value that define the widget </p><br>
+        <p>
+            <b>widget name: {{widgetDetails.name}}</b><br>
+             key1: {{widgetDetails.key1}}<br>
+             key2: {{widgetDetails.key2}}
+        </p>
+        <button type="button" title="Press to edit the widget details" class="btn btn-primary" >Edit</button>
 </div>
