--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,17 +8,23 @@
     margin: 14px auto;
 }
 
-.container{
- border: 1px solid #000000;
- border-radius: 10px;
- margin-left: 5px;
+.editWidget{
  padding: 5px;
+}
+
+.containerStyle{
+    background: #ededed;
+    padding: 12px;
+    border-radius: 10px;
 }
 
 .editWidgetButton{
     display: inline-block;
     float: right;
+}
 
+.leftMargin{
+    margin-left: 10px;
 }
 
 .widgetDetailsCloseButton{
@@ -26,7 +32,11 @@
     width: 27px;
     height: 28px;
     padding: 3px !important;
-    right: 33px;
+    right: 6px;
     position: absolute;
-    top: 28px;
+    top: 6px;
+}
+
+.red{
+    border-color: red !important;
 }
