--- a/public/views/widgetSummary.html
+++ b/public/views/widgetSummary.html
@@ -1,5 +1,5 @@
-<div class="widgetSummary">
-    <div class="col-xs-12 col-md-8">
+<div>
+    <div class="col-xs-12 col-md-8 containerStyle leftMargin">
         <h1 class="siteFont ">Widget summary </h1>
         <p>Table of all available widgets</p>
         <table class="table table-striped " >
