--- a/public/views/widgetDetails.html
+++ b/public/views/widgetDetails.html
@@ -4,11 +4,13 @@
         <p>All available widget details , containing key value that define the widget </p><br>
         <p>
             <b>{{widgetDetails.name}}</b><br>
-             key1: {{widgetDetails.key1}}<br>
-             key2: {{widgetDetails.key2}}<br>
-             key3: {{widgetDetails.key3}}<br>
-             key4: {{widgetDetails.key4}}<br>
-             key5: {{widgetDetails.key5}}
+            <ul class="unstyled">
+                <li>key1: {{widgetDetails.key1}}</li>
+                <li>key2: {{widgetDetails.key2}}</li>
+                <li>key3: {{widgetDetails.key3}}</li>
+                <li>key4: {{widgetDetails.key4}}</li>
+                <li>key5: {{widgetDetails.key5}}</li>
+            </ul>
         </p>
         <button type="button" title="Press to edit the widget details" class="btn btn-primary" ui-sref="edit({id: widgetDetails.id})">Edit</button>
 </div>
