--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,6 +14,28 @@
 .keyValueStyle{
     margin-left: 10px;
 }
+.keyValue{
+    display: inline-flex;
+    margin-left: 15px;
+    margin-top: 7px;
+    margin-right: 5px;
+}
+.keyValueButton{
+    margin-left: 5px;
+    border-radius: 24px !important;
+    width: 31px;
+    height: 25px;
+    padding: 0px !important;
+    margin-top: 5px;
+}
+.HelpMessage{
+    margin-left: 30px;
+    color: red;
+}
+
+.editHelpMessage{
+    color: red;
+}
 
 .containerStyle{
     background: #ededed;
