--- a/public/views/edit.html
+++ b/public/views/edit.html
@@ -1,5 +1,5 @@
-<div class="col-md-1 "></div>
-<div class="col-xs-12 col-md-10 editWidget containerStyle">
+<div class="col-md-4 "></div>
+<div class="col-xs-10 col-md-4 editWidget containerStyle leftMargin">
     <h1 class="siteFont">Edit Widget</h1>
 
     <form ng-init="init()" name="editWidgetForm" novalidate class="simple-form ">
@@ -22,4 +22,4 @@
         </div>
     </form>
 </div>
-<div class="col-md-1"></div>
+<div class="col-md-4"></div>
